--- a/.travis.yml
+++ b/.travis.yml
@@ -7,15 +7,7 @@ os:
 
 dist: xenial
 
-script: ./waf configure build 
+before_install:
+  - sudo apt-get install -y uuid-dev libsystemd-dev liblz4-dev libcurl4-nss-dev libzmq-dev libczmq-dev
 
-addons:
-  apt:
-    packages:
-      - uuid-dev
-      - libsystemd-dev
-      - liblz4-dev
-      - libcurl4-nss-dev
-      - libzmq-dev
-      - libczmq-dev
-      
+script: ./waf configure build 
