--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ os:
 dist: xenial
 
 before_install:
-  - sudo apt-get install -y uuid-dev libsystemd-dev liblz4-dev libcurl4-nss-dev libzmq5-dev libczmq-dev protobuf-compiler
+  - sudo apt-get install -y uuid-dev libsystemd-dev liblz4-dev libcurl4-nss-dev libzmq5-dev libczmq-dev protobuf-compiler libprotobuf-dev
 
 script: ./waf configure build 
