--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ os:
 dist: xenial
 
 before_install:
-  - sudo apt-get install -y uuid-dev libsystemd-dev liblz4-dev libcurl4-nss-dev libzmq5-dev libczmq-dev protobuf-compiler libprotobuf-dev
+  - sudo apt-get install -y uuid-dev libsystemd-dev liblz4-dev libcurl4-nss-dev libzmq5-dev libczmq-dev
+  - wget -O /tmp/protoc.zip https://github.com/protocolbuffers/protobuf/releases/download/v3.7.0rc2/protoc-3.7.0-rc-2-linux-x86_64.zip
+  - cd /usr/local && sudo unzip /tmp/protoc.zip
 
 script: ./waf configure build 
