Try to build protoc then.

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,10 @@ dist: xenial
 
 before_install:
   - sudo apt-get install -y uuid-dev libsystemd-dev liblz4-dev libcurl4-nss-dev libzmq5-dev libczmq-dev
-  - wget -O /tmp/protoc.zip https://github.com/protocolbuffers/protobuf/releases/download/v3.7.0rc2/protoc-3.7.0-rc-2-linux-x86_64.zip
-  - pushd /usr/local && sudo unzip /tmp/protoc.zip && popd
+  - wget https://github.com/protocolbuffers/protobuf/releases/download/v3.6.1/protobuf-cpp-3.6.1.tar.gz
+  - tar -xzf protobuf-cpp-3.6.1.tar.gz
+  - pushd protobuf-3.6.1 && ./configure --prefix=/usr/local && make && sudo make install && popd
+  - export PATH=/usr/local/bin:$PATH
+  - export PKG_CONFIG_PATH=/usr/local/lib/pkgconfig
 
 script: ./waf configure build 
