--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,6 @@ before_install:
   - sudo apt-get install -y uuid-dev libsystemd-dev liblz4-dev libcurl4-nss-dev libzmq5-dev libczmq-dev
   - wget https://github.com/protocolbuffers/protobuf/releases/download/v3.6.1/protobuf-cpp-3.6.1.tar.gz
   - tar -xzf protobuf-cpp-3.6.1.tar.gz
-  - pushd protobuf-3.6.1 && ./configure --prefix=/usr/local && make && sudo make install && popd
-  - export PATH=/usr/local/bin:$PATH
-  - export PKG_CONFIG_PATH=/usr/local/lib/pkgconfig
+  - pushd protobuf-3.6.1 && ./configure --prefix=/usr && make && sudo make install && popd
 
 script: ./waf configure build 
