--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_install:
 # - pushd protobuf-3.6.1 && ./configure --prefix=/usr && make && sudo make install && popd
 
 script:
-  - ./waf configure build
+  - ./waf configure build --notests && ./test/test_sendrecv.sh
 
 
 
