--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,8 @@ before_install:
 # - pushd protobuf-3.6.1 && ./configure --prefix=/usr && make && sudo make install && popd
 
 script:
-  - ./waf distclean configure build --notests && ./test/test_sendrecv.sh
+  - ./waf distclean configure build --notests && ./test/test_sendrecv.sh && ./waf --alltests
+
 
 
 
