Something has to be in the script.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,7 @@ services:
 
 before_install:
   - docker pull brettviren/ptmp-testing
-  - docker run brettviren/ptmp-testing
 
-# script:
-#   - ./waf distclean configure build --notests && ./test/test_sendrecv.sh && ./waf --alltests -j1
+script:
+  - docker run brettviren/ptmp-testing
 
