Fix dumbness in a test.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,16 @@ services:
 before_install:
   - docker pull brettviren/ptmp-testing
 
+git:
+  depth: 3
+  
+install:
+  - python3 ./tools/waf configure --prefix=$HOME \
+
 script:
-  - docker run brettviren/ptmp-testing
+  - python3 ./tools/waf --notests install 
+
+  # -  python3 ./tools/waf --alltests -j1 
+  # -  python3 ./tools/waf clean
+
 
