--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ before_install:
   - docker pull brettviren/ptmp-testing
 
 script:
-  - docker run brettviren/ptmp-testing
+  - docker run brettviren/ptmp-testing ./run.sh
 
 
